# morethan987

./: README.md
AutoClicks/: README.md  main.py  pyproject.toml
AutoClicks/CourseSelectingSystem/: README.MD  main.py  pyproject.toml
AutoClicks_Rod/: .gitignore  README.md  config.yaml  go.mod  go.sum
AutoClicks_pydoll/: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
CourseSelectingSystem/: README.MD
DBExperiments/: readme.md
KGMCTS/: README.md  kg_data_loader.py  kg_enhancer.py  main.py  mcts_tree.py  model_calls.py  node.py  setup_logger.py  sparse_entities.json  triplet_classifier.py
MCTS/: .env.example  README.md  main.py  mcts_tree.py  model_calls.py  node.py  pyproject.toml  qa.json  setup_logger.py
MathModelExampleProject/: readme.md
MechineLearning/: README.md  pyproject.toml  实验1-对率回归算法实践 -2025春 (1).doc  实验2-BP算法实践 -2025春.doc
Obsidian插件/: readme.md
campus-login/: AGENTS.md  README.md  go.mod
gpt-academic代码分析插件/: MATLAB项目转论文级描述.py  crazy_functional.py  readme.md
mping/: .gitignore  Cargo.toml  README.md
mping/src/: imap_client.rs  load_env.rs  main.rs  notification.rs  parser.rs  policy.rs
pension_opt/: README.md  main.py  predict_savg.py  pyproject.toml  utils.py
remote-campus-network/: README.md  wg0.conf.cloud  wg0.conf.jump  wg0.conf.local  wgctl
socket/: README.md  client.py  client_ui.py  server.py  start_client.py  start_server.py  test_ui.py  使用指南.md
ssh-reverse-proxy/: README.md  go.mod  go.sum  integration_test.go
数据提取器/: gui.py  main.py  readme.md
英语考试答题机/: main.py  readme.md  英语考试答题机.yml
(+617 files in other folders)
